# Automatic-Table-to-Graph-Generation

./: .gitignore  Dockerfile  README.md  constraints.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.ci/: install-dev.sh  install.sh  py.sh
configs/avs/: oracle-repeater.yaml
configs/ieee-cis/: oracle-fraud.yaml  sage.yaml
configs/mag/: oracle-cite.yaml  oracle-venue.yaml
configs/movielens/: sage-r2ne-63.92.yaml  sage-r2ne.yaml
configs/outbrain-small/: oracle-ctr.yaml
configs/rr/: oracle-cvr.yaml
configs/stackexchange/: sage.yaml
dbinfer/: README.md  __init__.py  evaluator.py  task_construct_utils.py  yaml_utils.py
dbinfer/cli/: builtin_dataset.py  construct_graph.py  evaluate_gml.py  fit_gml.py  fit_tab.py  fit_utils.py  preprocess.py
dbinfer/preprocess/: base.py  (+1 more)
dbinfer_bench/: dataset_meta.py  download.py  logging.py  rdb_dataset.py  table_writer.py
main/: README.md  autog.py  autog2.py  autom.py  preprocessing_dataset.py  rdb.py
models/: mlp.py
multi-table-benchmark/: README.md  setup_dbinfer_bench.py
prompts/: README.md  autog.py  autom.py  autom_task.py  identify.py  mautog.py  task.py
scripts/: README.md  autog.sh  autog_eval.sh  dl_AVS.sh  dl_DN.sh  dl_IC.sh  dl_MAG.sh  dl_ML.sh  dl_OB.sh  dl_RR.sh  dl_SE.sh  download.sh  run.sh  search.py
test/: avs_repeater.txt  diginetica_ctr.txt  ieeecis_fraud.txt  mag_cite.txt  mag_year.txt  movielens_ratings.txt  outbrain_ctr.txt  retailrocket_cvr.txt  stackexchange_churn.txt  stackexchange_upvote.txt
utils/: README.md  graph.py  misc.py  plot.py  rdb.py  tabular.py  training.py
(+166 files in other folders)
