[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GARC"
version = "0.0.1"
authors = [{ name = "", email = "" }]
keywords = []
description = ""
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""

[tool.yapfignore]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.semantic_release]
version_variables = [
    "grac/__init__.py:__version__",
]
version_toml = ["pyproject.toml:project.version"]
changelog_file = "CHANGELOG.md"
